Updates call to primary nav to pass in correct data

--- a/src/templates/book.html
+++ b/src/templates/book.html
@@ -3,7 +3,9 @@
     "header": "Gumdrop Mountains Resort & Spa"
 })
 
-@@include('./primary_nav.html')
+@@include('./primary_nav.html', {
+    "active": "book"
+})
 
 @@include('./breadcrumb.html', {
     "one": {
