--- a/src/templates/contact.html
+++ b/src/templates/contact.html
@@ -3,8 +3,9 @@
         "title": "- Contact us",
         "header": "Gumdrop Mountains Resort & Spa"
     })
-    @@include('./primary_nav.html')
-
+    @@include('./primary_nav.html', {
+        "active": "contact"
+    })
     @@include('./breadcrumb.html', {
         "one": {
             "link": "index.html",
