--- a/src/templates/room-medium.html
+++ b/src/templates/room-medium.html
@@ -4,7 +4,9 @@
         "header": "Gumdrop Mountains Resort & Spa"
     })
 
-    @@include('./primary_nav.html')
+    @@include('./primary_nav.html', {
+        "active": "room-medium"
+    })
 
     @@include('./breadcrumb.html', {
         "one": {
