--- a/src/templates/search.html
+++ b/src/templates/search.html
@@ -3,7 +3,9 @@
         "title": "- Search Results",
         "header": "Gumdrop Mountains Resort & Spa"
     })
-    @@include('./primary_nav.html')
+    @@include('./primary_nav.html', {
+        "active": "search"
+    })
 
     @@include('./breadcrumb.html', {
         "one": {
