--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -3,7 +3,9 @@
         "title": "",
         "header": "Gumdrop Mountains Resort & Spa"
     })
-    @@include('./primary_nav.html')
+    @@include('./primary_nav.html', {
+        "active": "index"
+    })
 
     @@include('./breadcrumb.html', {
         "one": {
