Updated partial for footer to support active state

--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -179,6 +179,10 @@ footer {
         color: #fff;
         font-size: 14px;
     }
+
+    .footer-links .active {
+        text-decoration: underline;
+    }
 }
 .navigation {
     padding: 40px 0;
