--- a/src/templates/partials/footer.html
+++ b/src/templates/partials/footer.html
@@ -3,17 +3,17 @@
         <div class="small-6 columns">
             <div class="row">
                 <ul class="inline-list footer-links">
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="rooms.html">Our Rooms</a></li>
-                    <li><a href="spa.html">Spa</a></li>
-                    <li><a href="events.html">Events</a></li>
+                    <li class="@@if (active === 'index') {active}"><a href="index.html">Home</a></li>
+                    <li class="@@if (active === 'rooms') {active}"><a href="rooms.html">Our Rooms</a></li>
+                    <li class="@@if (active === 'spa') {active}"><a href="spa.html">Spa</a></li>
+                    <li class="@@if (active === 'events') {active}"><a href="events.html">Events</a></li>
                 </ul>
             </div>
             <div class="row">
                 <ul class="inline-list footer-links">
-                    <li><a href="search.html">Search</a></li>
-                    <li><a href="contact.html">Contact Us</a></li>
-                    <li><a href="book.html">Book Now</a></li>
+                    <li class="@@if (active === 'search') {active}"><a href="search.html">Search</a></li>
+                    <li class="@@if (active === 'contact') {active}"><a href="contact.html">Contact Us</a></li>
+                    <li class="@@if (active === 'book') {active}"><a href="book.html">Book Now</a></li>
                 </ul>
             </div>
         </div>
