Updated footer call in all pages to pass in active flag

--- a/src/templates/events.html
+++ b/src/templates/events.html
@@ -66,4 +66,6 @@
 
     @@include('./promo_feature.html')
 
-    @@include('./footer.html')
+    @@include('./footer.html', {
+        "active": "events"
+    })
