--- a/src/templates/rooms.html
+++ b/src/templates/rooms.html
@@ -95,4 +95,6 @@
 
     @@include('./promo_feature.html')
 
-    @@include('./footer.html')
+    @@include('./footer.html', {
+        "active": "rooms"
+    })
