--- a/src/templates/search.html
+++ b/src/templates/search.html
@@ -27,4 +27,6 @@
 
     @@include('./promo_feature.html')
 
-    @@include('./footer.html')
+    @@include('./footer.html', {
+        "active": "search"
+    })
