--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -39,4 +39,6 @@
 
     @@include('./promo_feature.html')
 
-    @@include('./footer.html')
+    @@include('./footer.html', {
+        "active": "index"
+    })
