--- a/src/templates/room-executive.html
+++ b/src/templates/room-executive.html
@@ -60,4 +60,6 @@
 
     @@include('./promo_feature.html')
 
-    @@include('./footer.html')
+    @@include('./footer.html', {
+        "active": "rooms"
+    })
