adds tab index to search bar

--- a/src/templates/partials/primary_nav.html
+++ b/src/templates/partials/primary_nav.html
@@ -22,7 +22,7 @@
                                 <li class="has-form">
                                     <div class="row collapse">
                                         <div class="large-8 small-9 columns">
-                                            <input type="text" placeholder="Find Happy Place">
+                                            <input tabindex="0" type="text" placeholder="Find Happy Place">
                                         </div>
                                         <div class="large-4 small-3 columns">
                                             <a href="search.html" class="alert button expand">Search</a>
